# pico-projects

./: CMakeLists.txt
wifi_tests/: CMakeLists.txt  wifi_pico2_tester.c  wifi_scanner_blinker.c
